--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
 		"@react-oauth/google": "^0.12.2",
 		"jwt-decode": "^4.0.0",
 		"react": "^19.2.0",
-		"react-dom": "^19.2.0"
+		"react-dom": "^19.2.0",
+		"react-markdown": "^10.1.0",
+		"remark-gfm": "^4.0.1"
 	},
 	"devDependencies": {
 		"@types/node": "^24.10.1",
